--- a/day10/集成学习.md
+++ b/day10/集成学习.md
@@ -14,7 +14,7 @@
    (b) 使得上述得到的样本集求得弱学习器$ \varphi_j ​$。
 2. 对所有的弱分类器$ \lbrace \varphi_j \rbrace^b_{i=1} $，求平均值，得到一个强分类器$ f $。
 
-
+**从偏差-方差分解的角度看，Bagging主要关注降低方差，因此它在不剪枝决策树、神经网络等易受扰动的学习器上效用更加明显。**
 
 ### 随机森林
 
@@ -68,7 +68,7 @@
 >
 > 当AdaBoost的基础分类器比较复杂时，AdaBoost很容易陷入过拟合。但是当AdaBoost 的基础分类器比较简单时，AdaBoost 反而难以陷入过拟合。这也是为什么AdaBoost 的基础分类器经常选择使用树桩的原因。
 
-
+**从偏差-方差分解的角度分析，Boosting主要关注降低偏差，因此Boosting能基于泛化性能相当弱的学习器构建出很强的集成。**
 
 ## 集成策略
 
@@ -102,3 +102,102 @@
 因此实验和应用均显示出，加权平均法不一定优于简单平均法。
 
 通常如果个体学习器性能相差较大时，适合使用加权平均法；个体学习器性能相差较近时，适合使用简单平均法。
+
+
+
+## 集成学习常见面试题
+
+1. 什么是集成学习算法？
+
+   集成学习通过构建并结合多个学习器来完成学习任务，集成学习的一般结构：先产生一组“个体学习器”，再用某种策略将它们结合起来。
+
+2. 集成学习主要有哪几种框架？
+
+   个体学习器间存在强依赖关系，必须串行生成的序列化方法。代表：Boosting
+
+   个体学习器间不存在强依赖关系，可同时生成的并行化方法。
+
+3. 简单介绍一下bagging，常用bagging算法有哪些？
+
+   Bagging/随即森林
+
+4. 简单介绍一下boosting，常用boosting算法有哪些？
+
+   Boosting和Adaboost
+
+5. boosting思想的数学表达式是什么？
+
+6. 简单介绍一下stacking，常用stacking算法有哪些？
+
+7. 你意识到你的模型受到低偏差和高方差问题的困扰，应该使用哪种算法来解决问题呢？为什么？
+
+8. 简述一下随机森林算法的原理
+
+9.随机森林的随机性体现在哪里？
+
+10.随机森林为什么不容易过拟合？
+
+11.你已经建了一个有10000棵树的随机森林模型。在得到0.00的训练误差后，你非常高兴。但是，验证错误是34.23。到底是怎么回事？你还没有训练好你的模型吗？
+
+12.如何使用随机森林去弥补特征向量中的缺失值
+
+13.如何使用随机森林对特征重要性进行评估？
+
+14.随机森林算法训练时主要需要调整哪些参数？
+
+15.随机森林为什么不能用全样本去训练m棵决策树？
+
+16.随机森林算法有哪些优缺点
+
+17.简述一下Adaboost原理
+
+18.AdaBoost的优点和缺点
+
+19.为什么Adaboost对噪声敏感？
+
+20.Adaboost和随机森林算法的异同点
+
+ 
+
+集成学习面试题二
+
+1.简述GBDT原理
+
+2.GBDT常用损失函数有哪些？
+
+3.GBDT中为什么要用负梯度来代替残差计算？
+
+4.GBDT如何用于分类?
+
+5.GBDT中的决策树是分类树还是回归树？
+
+6.如何使用GBDT构建特征？
+
+7.为什么GBDT不适合使用高维稀疏特征?
+
+8.GBDT通过什么方式减少误差？
+
+9. GBDT如何进行正则化？ 
+
+10.GBDT里的G代表什么，体现在哪里？
+
+11.GBDT需要调试的参数有哪些？
+
+12.GBDT算法的优缺点有哪些？
+
+13.Xgboost/GBDT在调参时为什么树的深度很少就能达到很高的精度，而随机森林需要的深度相对较高？
+
+14.为什么Xgboost要用泰勒展开，优势在哪里？
+
+15.Xgboost如何寻找最优特征？
+
+16.Xgboost采样是有放回还是无放回的呢？
+
+17.XGBoost训练通常调整的参数有哪些？
+
+18.XGBoost中的树是如何剪枝？
+
+19.XGBoost如何解决缺失值问题？
+
+20.XGBoost和GBDT的区别
+--------------------- 
